# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("libnapi_common") {
  include_dirs = [
    "include",
    "//base/security/access_token/frameworks/common/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
  ]

  sources = [
    "src/napi_common.cpp",
    "src/napi_error.cpp",
  ]
  configs = [ "//base/security/access_token/config:coverage_flags" ]

  deps = [ "//foundation/arkui/napi:ace_napi" ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "security"
  part_name = "access_token"
  output_name = "libnativetoken"
}
