# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libprivacymanager") {
  include_dirs = [
    "napi/include",
    "//base/security/access_token/frameworks/common/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/privacy/include",
    "//base/security/access_token/interfaces/kits/common/include",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "napi/src/napi_context_common.cpp",
    "napi/src/native_module.cpp",
    "napi/src/permission_record_manager_napi.cpp",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/privacy:libprivacy_sdk",
    "//base/security/access_token/interfaces/kits/common:libnapi_common",
    "//foundation/arkui/napi:ace_napi",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  configs = [ "//base/security/access_token/config:coverage_flags" ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "access_token"
}
