# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../access_token.gni")

ohos_shared_library("libprivacymanager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "${access_token_path}/frameworks/common/include",
    "${access_token_path}/frameworks/privacy/include",
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/privacy/include",
    "${access_token_path}/interfaces/kits/common/include",
    "napi/include",
  ]

  sources = [
    "napi/src/napi_context_common.cpp",
    "napi/src/native_module.cpp",
    "napi/src/permission_record_manager_napi.cpp",
  ]

  deps = [
    "${access_token_path}/interfaces/innerkits/privacy:libprivacy_sdk",
    "../common:libnapi_common",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]
  configs = [ "${access_token_path}/config:coverage_flags" ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "access_token"
}
