# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

group("param_files") {
  deps = [
    ":access_token.para",
    ":access_token.para.dac",
  ]
}

ohos_prebuilt_etc("access_token.para") {
  source = "//base/security/access_token/services/accesstokenmanager/etc/access_token.para"
  module_install_dir = "etc/param"
  part_name = "access_token"
  subsystem_name = "security"
}

ohos_prebuilt_etc("access_token.para.dac") {
  source = "//base/security/access_token/services/accesstokenmanager/etc/access_token.para.dac"
  module_install_dir = "etc/param"
  part_name = "access_token"
  subsystem_name = "security"
}
